interface de connexion terminée

--- a/interface_logging/reset.html
+++ b/interface_logging/reset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion - SkillSwap</title>
+    <title>Réinitialiser le mot de passe - SkillSwap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,16 +13,14 @@
         </div>
         <div class="form-section">
             <div class="auth-container">
-                <h2>Connexion</h2>
+                <h2>Réinitialiser le mot de passe</h2>
                 <form>
                     <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Mot de passe" required>
-                    <button type="submit">Se connecter</button>
-                    <p>Pas encore inscrit ? <a href="inscription.html">Créer un compte</a></p>
-                    <p><a href="reset.html">Mot de passe oublié ?</a></p>
+                    <button type="submit">Envoyer</button>
+                    <p>Retour <a href="connexion.html">à la page de connexion</a></p>
                 </form>
             </div>
         </div>
-    </div>
+    </div>-+
 </body>
 </html>
