--- a/interface_logging/connexion.html
+++ b/interface_logging/connexion.html
@@ -12,6 +12,9 @@
             <img src="../assets/logo.png" alt="LOGO">
         </div>
         <div class="form-section">
+            <div class="titre">
+                <h1 class="gradient"> SkillSwap</h1>
+            </div>
             <div class="auth-container">
                 <h2>Connexion</h2>
                 <form>
