Profile User page modifiée terminée

--- a/User profile/user.html
+++ b/User profile/user.html
@@ -19,7 +19,7 @@
       <nav class="icones">
         <ul>
           <li><a href=""><i class="fas fa-home"></i> Home</a></li>
-          <li><a href=""><i class="fas fa-briefcase"></i> Jobs</a></li>
+          <li><a href=""><i class="fas fa-briefcase"></i> Skills</a></li>
           <li><a href=""><i class="fas fa-envelope"></i> Contact</a></li>
           <li><a href=""><i class="fas fa-info-circle"></i> About</a></li>
         </ul>
