--- a/User profile/user.html
+++ b/User profile/user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h1 class="gradient"><a href="user.html"><img class="icon" src="/assets/df212d5a-4fef-414c-a784-151a674b27be.jpg" alt="Logo">SkillSwap</a></h1>
+        <h1 class="gradient"><a href="user.html"><img class="icon" src="../assets/icon.png" alt="Logo">SkillSwap</a></h1>
         <div class="search-container">
             <form action="/search" >
               <input type="text" class="search-input" placeholder="Search">
