Page Edit ou Add et qlq modifications dans la page user profile

--- a/User profile/user.html
+++ b/User profile/user.html
@@ -41,9 +41,9 @@
             </div>
             <div class="details">
                 <h2>BENNANI Doha</h2>
-                <p>bennanidoha3@example.com</p>
+                <p>bennanidoha3@gmail.com</p>
             </div>
-            <a href=""><button>Edit Profile</button></a>
+            <a href="/Add_editprofile/edit.html"><button>Edit Profile</button></a>
         </div>
     <div class="section">
             <div class="progress-section">
@@ -58,7 +58,7 @@
             <div class="section-header">
                 <h3>Skills</h3>
                 <p>No Skills Found</p>
-                <a href=""><button>Add +</button></a>
+                <a href="/Add_editprofile/edit.html"><button>Add +</button></a>
                 
             </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="section-header">
                 <h3>Education</h3>
                 <p>No Educations Available</p>
-                <a href=""><button>Add +</button></a>
+                <a href="/Add_editprofile/edit.html"><button>Add +</button></a>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             <div class="section-header">
                 <h3>Work Experience</h3>
                 <p>No Work Experience Available</p>
-                <a href=""><button>Add +</button></a>
+                <a href="/Add_editprofile/edit.html"><button>Add +</button></a>
             </div>
         </div>
 
