Ajout de Contact dans la page User Profile

--- a/User profile/user.html
+++ b/User profile/user.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href=""><i class="fas fa-home"></i> Home</a></li>
           <li><a href=""><i class="fas fa-briefcase"></i> Skills</a></li>
-          <li><a href=""><i class="fas fa-envelope"></i> Contact</a></li>
+          <li><a href="/interface_contact/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
           <li><a href=""><i class="fas fa-info-circle"></i> About</a></li>
         </ul>
       </nav> 
