page FAQ terminee

--- a/interface_net/FAQ.html
+++ b/interface_net/FAQ.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="FAQ.css">
 </head>
 <body>
+    <div class="tete">
+        <div class="titre">
+            <h1 class ="gradient">
+                <img class="icon" src="../assets/icon.png" alt="Logo">
+                SkillSwap
+            </h1>
+        </div>
+        <div class="liste">
+            <ul>
+                <li><a href="./about.html">About</a> </li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
+                <li><a href="./privacy.html">Privacy</a></li>
+                <li><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
+                <li><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li>
+            </ul>
+        </div>
+    </div>
     <header>
         <h1>FAQ - Questions Fréquemment Posées</h1>
         <p>Trouvez ici les réponses aux questions les plus courantes sur SkillSwap.</p>
