--- a/interface_logging/connexion.html
+++ b/interface_logging/connexion.html
@@ -20,7 +20,7 @@
                 <form>
                     <input type="email" placeholder="Email" required>
                     <input type="password" placeholder="Mot de passe" required>
-                    <button type="submit">Se connecter</button>
+                    <a href="/Page_principale/pp.html"><button type="submit">Se connecter</button></a>
                     <p>Pas encore inscrit ? <a href="../interface_inscription/inscription.html">Créer un compte</a></p>
                     <p><a href="reset.html">Mot de passe oublié ?</a></p>
                 </form>
