--- a/interface_net/about.html
+++ b/interface_net/about.html
@@ -29,6 +29,7 @@
     <div class="body">
         <div class="body-content">
             <h1>Exchange your skills with SkillSwap!</h1>
+            <div class="skill"> <h2>Hey ! I'm a <span class="skill-text"></span></h2></div>
             <p>You have a skill right? Whether you are a developer, designer, teacher, or artisan, there's always something new to learn!
             <br>
             Want to dance? Pick up a new sport? Or master a language with guidance from someone experienced?<br>
@@ -67,6 +68,9 @@
     <div class="footer">
         <p>©  2024 SkillSwap. All Rights Reserved..</p>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" 
+    integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="about.js"></script>
 </body>
 </html>
