--- a/interface_inscription/inscription.html
+++ b/interface_inscription/inscription.html
@@ -9,9 +9,10 @@
 <body>
     <div class="container">
         <div class="image-section">
-            <img src="../assets/logo.png" alt="LOGO">
+            <img src="../assets/WallpaperSite.png" alt="LOGO">
         </div>
         <div class="form-section">
+            <img src="/assets/swap.png" alt="">
             <div class="auth-container">
                 <h2>Inscription</h2>
                 <form>
