--- a/interface_logging/reset.html
+++ b/interface_logging/reset.html
@@ -9,18 +9,16 @@
 <body>
     <div class="container">
         <div class="image-section">
-            <img src="../assets/logo.png" alt="LOGO">
+            <img src="../assets/WallpaperSite.png" alt="LOGO">
         </div>
         <div class="form-section">
-            <div class="titre">
-                <h1 class="gradient"> SkillSwap</h1>
-            </div>
+            <img src="/assets/swap.png" alt="">
             <div class="auth-container">
                 <h2>Réinitialiser le mot de passe</h2>
                 <form>
                     <input type="email" placeholder="Email" required>
                     <button type="submit">Envoyer</button>
-                    <p>Retour <a href="connexion.html">à la page de connexion</a></p>
+                    <p> <a href="connexion.html">Retour à la page de connexion</a></p>
                 </form>
             </div>
         </div>
