--- a/interface_logging/connexion.html
+++ b/interface_logging/connexion.html
@@ -9,18 +9,16 @@
 <body>
     <div class="container">
         <div class="image-section">
-            <img src="../assets/logo.png" alt="LOGO">
+            <img src="../assets/WallpaperSite.png" alt="LOGO">
         </div>
         <div class="form-section">
-            <div class="titre">
-                <h1 class="gradient"> SkillSwap</h1>
-            </div>
+           <img src="/assets/swap.png" alt="">
             <div class="auth-container">
                 <h2>Connexion</h2>
-                <form>
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Mot de passe" required>
-                    <a href="/Page_principale/pp.html"><button type="submit">Se connecter</button></a>
+                <form action="/Home/home.html" method="get"> 
+                    <input type="text" placeholder="Username" pattern="student1" required>
+                    <input type="password" placeholder="Password" pattern="esisa2025" required>
+                    <button type="submit">Login</button>
                     <p>Pas encore inscrit ? <a href="../interface_inscription/inscription.html">Créer un compte</a></p>
                     <p><a href="reset.html">Mot de passe oublié ?</a></p>
                 </form>
