--- a/interface_logging/connexion.html
+++ b/interface_logging/connexion.html
@@ -14,13 +14,13 @@
         <div class="form-section">
            <img src="/assets/swap.png" alt="">
             <div class="auth-container">
-                <h2>Connexion</h2>
+                <h2>LOGIN</h2>
                 <form action="/Home/home.html" method="get"> 
                     <input type="text" placeholder="Username" pattern="student1" required>
                     <input type="password" placeholder="Password" pattern="esisa2025" required>
                     <button type="submit">Login</button>
-                    <p>Pas encore inscrit ? <a href="../interface_inscription/inscription.html">Créer un compte</a></p>
-                    <p><a href="reset.html">Mot de passe oublié ?</a></p>
+                    <p>Don't have an account ? <a href="../interface_inscription/inscription.html">REGISTER NOW</a></p>
+                    <p><a href="reset.html">Forgot your password ?</a></p>
                 </form>
             </div>
         </div>
