--- a/interface_logging/reset.html
+++ b/interface_logging/reset.html
@@ -9,16 +9,16 @@
 <body>
     <div class="container">
         <div class="image-section">
-            <img src="../assets/WallpaperSite.png" alt="LOGO">
+            <img src="../assets/forgot.png" alt="LOGO">
         </div>
         <div class="form-section">
             <img src="/assets/swap.png" alt="">
             <div class="auth-container">
-                <h2>Réinitialiser le mot de passe</h2>
+                <h2>Reset your password</h2>
                 <form>
                     <input type="email" placeholder="Email" required>
-                    <button type="submit">Envoyer</button>
-                    <p> <a href="connexion.html">Retour à la page de connexion</a></p>
+                    <button type="submit">Submit</button>
+                    <p> <a href="connexion.html">Back to LOGIN</a></p>
                 </form>
             </div>
         </div>
