--- a/interface_net/about.html
+++ b/interface_net/about.html
@@ -10,19 +10,16 @@
 <body>
     <div class="tete">
         <div class="titre">
-            <h1 class ="gradient">
-                <img class="icon" src="../assets/icon.png" alt="Logo">
-                SkillSwap
-            </h1>
+                <img class="icon" src="../assets/swap.png" alt="Logo">
         </div>
         <div class="liste">
             <ul>
-                <li><a href="./about.html">About</a> </li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./faq.html">FAQ</a></li>
-                <li><a href="./privacy.html">Privacy</a></li>
-                <li><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
-                <li><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li>
+                <div class="liste1"><li class="navbar"><a href="./about.html">About</a> </li>
+                <li class="navbar"><a href="./contact.html">Contact</a></li>
+                <li class="navbar"><a href="./privacy.html">Privacy</a></li>
+                <li class="navbar"><a href="./faq.html">FAQ</a></li></div>
+                <div class="liste2"><li class="navbar2"><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
+                <li class="navbar2"><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li></div>
             </ul>
         </div>
     </div>
@@ -66,7 +63,8 @@
     
     <!-- Section Pied de Page -->
     <div class="footer">
-        <p>©  2024 SkillSwap. All Rights Reserved..</p>
+        <img src="/assets/swap-dark.png" alt="">
+        <p>©  2025 SkillSwap. All Rights Reserved.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" 
     integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" 
