Une petite amélioration dans la page Home

--- a/Home/home.html
+++ b/Home/home.html
@@ -80,7 +80,7 @@
         </div>
         <h5>Skill wanted : Game Development </h5>
         <div class="tooltip-container">
-          <span class="tooltip">23 Followers</span>
+          <span class="tooltip2">23 Followers</span>
           <span class="text">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -94,7 +94,7 @@
                 d="M0 109.5C0 83.2665 21.2665 62 47.5 62V62C73.7335 62 95 83.2665 95 109.5V114H0V109.5Z"
               ></path>
             </svg>
-            Follow</span
+            <p>Follow</p></span
           >
         </div>
         
@@ -111,7 +111,7 @@
         </div>
         <h5>Skill wanted : Mental Health Awareness</h5>
         <div class="tooltip-container">
-          <span class="tooltip">19 Followers</span>
+          <span class="tooltip2">19 Followers</span>
           <span class="text">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -125,7 +125,7 @@
                 d="M0 109.5C0 83.2665 21.2665 62 47.5 62V62C73.7335 62 95 83.2665 95 109.5V114H0V109.5Z"
               ></path>
             </svg>
-            Follow</span
+            <p>Follow</p></span
           >
         </div>
       </div>
@@ -141,7 +141,7 @@
         </div>
         <h5>Skill wanted : Japanese for Business</h5>
         <div class="tooltip-container">
-          <span class="tooltip">36 Followers</span>
+          <span class="tooltip2">36 Followers</span>
           <span class="text">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -155,7 +155,7 @@
                 d="M0 109.5C0 83.2665 21.2665 62 47.5 62V62C73.7335 62 95 83.2665 95 109.5V114H0V109.5Z"
               ></path>
             </svg>
-            Follow</span>
+            <p>Follow</p></span>
         </div>
       </div>
 
@@ -170,7 +170,7 @@
         </div>
         <h5>Skill wanted : Cake Decoration</h5>
         <div class="tooltip-container">
-          <span class="tooltip">12 Followers</span>
+          <span class="tooltip2">12 Followers</span>
           <span class="text">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -184,7 +184,7 @@
                 d="M0 109.5C0 83.2665 21.2665 62 47.5 62V62C73.7335 62 95 83.2665 95 109.5V114H0V109.5Z"
               ></path>
             </svg>
-            Follow</span
+            <p>Follow</p></span
           >
         </div>
     </div>
