--- a/Add_editprofile/edit.html
+++ b/Add_editprofile/edit.html
@@ -10,7 +10,7 @@
 <body>
     <div class="div-mere">
 <div class="navbar">
-        <h1 class="gradient"><a href="/User profile/user.html"><img class="icon" src="../assets/icon.png" alt="Logo">SkillSwap</a></h1>
+        <a href="/Home/home.html"><img class="icon" src="../assets/swap.png" alt="Logo"></a>
         <div class="icone">
             <h6>Doha Bennani</h6>
             <img src="/assets/picprofile.png" alt="">
