--- a/Home/home.html
+++ b/Home/home.html
@@ -59,24 +59,25 @@
         <img src="https://api.iconify.design/prime:chevron-down.svg?color=%23888888" alt="">
         </button></div>
         <div class="courses-list" id="courses-list">
-          <button>Web Development</button>
-          <button>Data Science</button>
-          <button>Graphic Design</button>
-          <button>AI & Machine Learning</button>
-          <button>Marketing</button>
-          <button>Photography</button>
+          <button data-category="Web-Development">Web Development</button>
+          <button data-category="Data-Science">Data Science</button>
+          <button data-category="Graphic-Design">Graphic Design</button>
+          <button data-category="AI-Machine-Learning">AI & Machine Learning</button>
+          <button data-category="Marketing">Marketing</button>
+          <button data-category="Photography">Photography</button>
+          <button data-category="All">All Skills</button>
         </div></div>
     </div>
     <div class="cards">
 
-      <div class="card">
+      <div class="card Marketing" >
         <img src="/assets/image1.jpeg" alt=" Image">
         <h3>Marketing</h3>
         <div class="profile">
             <div class="profile-photo">
                 <img src="/assets/picprofile.png" alt="">
             </div>
-        <a href="" >El Guzouli Malak</a>
+        <a href="../ViewProfile/Malak.html" >El Guzouli Malak</a>
         </div>
         <h5>Skill wanted : Game Development </h5>
         <div class="tooltip-container">
@@ -100,14 +101,14 @@
         
       </div>
 
-      <div class="card">
+      <div class="card Data-Science">
         <img src="/assets/img.jpeg" alt=" Image">
         <h3>Data Science</h3>
         <div class="profile">
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >Wali Alami Mohammed</a>
+        <a href="../ViewProfile/Mohamed.html" >Wali Alami Mohammed</a>
         </div>
         <h5>Skill wanted : Mental Health Awareness</h5>
         <div class="tooltip-container">
@@ -130,14 +131,14 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card AI-&-Machine-Learning">
         <img src="/assets/img2.jpeg" alt=" Image">
         <h3>AI & Machine Learning</h3>
         <div class="profile">
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >El Hallaoui Nacer</a>
+        <a href="../ViewProfile/Nacer.html" >El Hallaoui Nacer</a>
         </div>
         <h5>Skill wanted : Japanese for Business</h5>
         <div class="tooltip-container">
@@ -159,14 +160,14 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card Graphic-Design">
         <img src="/assets/images.jpeg" alt=" Image">
         <h3>Graphic Design</h3>
         <div class="profile">
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >Bennani Doha</a>
+        <a href="../ViewProfile/Doha.html" >Bennani Doha</a>
         </div>
         <h5>Skill wanted : Cake Decoration</h5>
         <div class="tooltip-container">
