--- a/interface_net/contact.html
+++ b/interface_net/contact.html
@@ -10,18 +10,18 @@
     <div class="tete">
         <div class="titre">
             <h1 class ="gradient">
-                <img class="icon" src="../assets/icon.png" alt="Logo">
-                SkillSwap
+                <a href="/Home/home.html"><img class="icon" src="../assets/swap.png" alt="Logo"></a>
             </h1>
         </div>
         <div class="liste">
             <ul>
-                <li><a href="./about.html">About</a> </li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./faq.html">FAQ</a></li>
-                <li><a href="./privacy.html">Privacy</a></li>
-                <li><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
-                <li><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li>
+                <div class="liste1"><li class="navbar"><a href="./about.html">About</a> </li>
+                <li class="navbar"><a href="./contact.html">Contact</a></li>
+                <li class="navbar"><a href="./privacy.html">Privacy</a></li>
+                <li class="navbar"><a href="./faq.html">FAQ</a></li></div>
+                <div class="liste2"><li class="navbar2"><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
+                
+                <li class="navbar2"><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li></div>
             </ul>
         </div>
     </div>
@@ -57,8 +57,9 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 SkillSwap. Tous droits réservés.</p>
-    </footer>
+    <div class="footer">
+        <img src="/assets/swap-dark.png" alt="">
+        <p>©  2025 SkillSwap. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
