--- a/User profile/user.html
+++ b/User profile/user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h1 class="gradient"><a href="/Home/home.html"><img class="icon" src="/assets/swap.png" alt="Logo"></a></h1>
+        <a href="/Home/home.html"><img class="icon" src="/assets/swap.png" alt="Logo"></a>
         
   <div class="icones">   
     <div class="icones1">
@@ -112,6 +112,10 @@
             <h3>Badges</h3>
             <p>No Badge Found</p>
         </div>
+    </div>
+    <div class="footer">
+        <img  src="/assets/swap.png" alt="">
+        <h4>©  2025 SkillSwap. All Rights Reserved.</h4>
     </div>
     <script src="user.js"></script>
 </body>
