--- a/Home/home.html
+++ b/Home/home.html
@@ -77,7 +77,7 @@
             <div class="profile-photo">
                 <img src="/assets/picprofile.png" alt="">
             </div>
-        <a href="" >El Guzouli Malak</a>
+        <a href="../ViewProfile/Malak.html" >El Guzouli Malak</a>
         </div>
         <h5>Skill wanted : Game Development </h5>
         <div class="tooltip-container">
@@ -108,7 +108,7 @@
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >Wali Alami Mohammed</a>
+        <a href="../ViewProfile/Mohamed.html" >Wali Alami Mohammed</a>
         </div>
         <h5>Skill wanted : Mental Health Awareness</h5>
         <div class="tooltip-container">
@@ -138,7 +138,7 @@
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >El Hallaoui Nacer</a>
+        <a href="../ViewProfile/Nacer.html" >El Hallaoui Nacer</a>
         </div>
         <h5>Skill wanted : Japanese for Business</h5>
         <div class="tooltip-container">
@@ -167,7 +167,7 @@
           <div class="profile-photo">
               <img src="/assets/picprofile.png" alt="">
           </div>
-        <a href="" >Bennani Doha</a>
+        <a href="../ViewProfile/Doha.html" >Bennani Doha</a>
         </div>
         <h5>Skill wanted : Cake Decoration</h5>
         <div class="tooltip-container">
