--- a/skill_details/cooking.html
+++ b/skill_details/cooking.html
@@ -16,8 +16,8 @@
             <div class="icones1">
                 <ul>
                     <li><a href="/Home/home.html"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href=""><i class="fas fa-briefcase"></i> Skills</a></li>
-                    <li><a href="/interface_net/about.html" class="active"><i class="fas fa-search"></i> Find Skills</a></li>
+                    <li><a href="/interface_net2/my_skills.html"><i class="fas fa-briefcase"></i> Skills</a></li>
+                    <li><a href="/interface_net2/find_skills.html" class="active"><i class="fas fa-search"></i> Find Skills</a></li>
                     <li><a href="/interface_contact/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         
                 </ul>
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-  <script src="script.js"></script>
+  <script src="/interface_net2/script.js"></script>
 
     <!-- Skill Details Section -->
     <main class="main-content">
