find_skills update

--- a/interface_net2/find_skills.html
+++ b/interface_net2/find_skills.html
@@ -65,37 +65,37 @@
                 <i class="fas fa-code"></i>
                 <h3>Programming</h3>
                 <p>Learn and master popular programming languages like Python, JavaScript, and C#.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/programming.html">Explore</a>
             </div>
             <div class="skill-card">
                 <i class="fas fa-camera"></i>
                 <h3>Photography</h3>
                 <p>Discover tips, tricks, and techniques to take stunning photos.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/photography.html">Explore</a>
             </div>
             <div class="skill-card">
                 <i class="fas fa-paint-brush"></i>
                 <h3>Painting</h3>
                 <p>Unleash your creativity with painting tutorials and expert advice.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/painting.html">Explore</a>
             </div>
             <div class="skill-card">
                 <i class="fas fa-language"></i>
                 <h3>Languages</h3>
                 <p>Learn new languages and improve your fluency in foreign dialects.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/languages.html">Explore</a>
             </div>
             <div class="skill-card">
                 <i class="fas fa-music"></i>
                 <h3>Music</h3>
                 <p>Learn how to play instruments or improve your singing techniques.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/music.html">Explore</a>
             </div>
             <div class="skill-card">
                 <i class="fas fa-bread-slice"></i>
                 <h3>Cooking</h3>
                 <p>Explore recipes and learn cooking techniques from around the world.</p>
-                <a href="skill_detail.html">Explore</a>
+                <a href="/skill_details/cooking.html">Explore</a>
             </div>
         </section>
     </main>
