modification faq done

--- a/interface_net/FAQ.html
+++ b/interface_net/FAQ.html
@@ -9,67 +9,64 @@
 <body>
     <div class="tete">
         <div class="titre">
-            <h1 class ="gradient">
-                <img class="icon" src="../assets/icon.png" alt="Logo">
-                SkillSwap
-            </h1>
+                <img class="icon" src="../assets/swap.png" alt="Logo">
         </div>
         <div class="liste">
             <ul>
-                <li><a href="./about.html">About</a> </li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./faq.html">FAQ</a></li>
-                <li><a href="./privacy.html">Privacy</a></li>
-                <li><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
-                <li><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li>
+                <div class="liste1"><li class="navbar"><a href="./about.html">About</a> </li>
+                <li class="navbar"><a href="./contact.html">Contact</a></li>
+                <li class="navbar"><a href="./privacy.html">Privacy</a></li>
+                <li class="navbar"><a href="./faq.html">FAQ</a></li></div>
+                <div class="liste2"><li class="navbar2"><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
+                <li class="navbar2"><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li></div>
             </ul>
         </div>
     </div>
     <header>
-        <h1>FAQ - Questions Fréquemment Posées</h1>
-        <p>Trouvez ici les réponses aux questions les plus courantes sur SkillSwap.</p>
+        <h1>FAQ - Frequently Asked Questions</h1>
+        <p>TFind answers to the most common questions about SkillSwap here.</p>
     </header>
 
     <main>
         <section class="faq-section">
-            <h2>Questions Générales</h2>
+            <h2>General Questions</h2>
             <div class="faq-item">
-                <h3>Qu'est-ce que SkillSwap ?</h3>
-                <p>SkillSwap est une plateforme qui permet aux utilisateurs d'échanger et de partager leurs compétences, en facilitant la collaboration entre des personnes ayant des centres d'intérêt similaires.</p>
+                <h3>What is SkillSwap ?</h3>
+                <p>SkillSwap is a platform that allows users to exchange and share their skills, facilitating collaboration between people with similar interests.</p>
             </div>
             <div class="faq-item">
-                <h3>Comment créer un compte ?</h3>
-                <p>Pour créer un compte, cliquez sur le bouton "S'inscrire" en haut de la page, remplissez le formulaire d'inscription et suivez les instructions.</p>
-            </div>
-        </section>
-
-        <section class="faq-section">
-            <h2>Questions sur les Compétences</h2>
-            <div class="faq-item">
-                <h3>Comment puis-je ajouter mes compétences ?</h3>
-                <p>Après vous être connecté, rendez-vous sur votre profil et cliquez sur "Ajouter une compétence". Remplissez les détails et enregistrez vos modifications.</p>
-            </div>
-            <div class="faq-item">
-                <h3>Puis-je apprendre plusieurs compétences à la fois ?</h3>
-                <p>Oui, vous pouvez rechercher et participer à plusieurs échanges de compétences en même temps, selon votre disponibilité.</p>
+                <h3>How do I create an account?</h3>
+                <p>To create an account, click on the "Register" button at the top of the page, fill out the registration form, and follow the instructions.</p>
             </div>
         </section>
 
         <section class="faq-section">
-            <h2>Support et Assistance</h2>
+            <h2>Questions about Skills</h2>
             <div class="faq-item">
-                <h3>Que faire si je rencontre un problème avec un autre utilisateur ?</h3>
-                <p>Contactez notre équipe d'assistance via la page "Contactez-nous" et fournissez les détails nécessaires. Nous ferons de notre mieux pour résoudre le problème.</p>
+                <h3>How do I add my skills?</h3>
+                <p>After logging in, go to your profile and click on "Add Skill". Fill in the details and save your changes.</p>
             </div>
             <div class="faq-item">
-                <h3>Comment puis-je contacter le support technique ?</h3>
-                <p>Vous pouvez nous joindre à l'adresse support@skillswap.com ou via notre formulaire de contact disponible sur le site.</p>
+                <h3>Can I learn more than one skill at once?</h3>
+                <p>Yes, you can search for and participate in multiple skills exchanges at the same time, depending on your availability.</p>
+            </div>
+        </section>
+
+        <section class="faq-section">
+            <h2>Support and Assistance</h2>
+            <div class="faq-item">
+                <h3>What if I have a problem with another user?</h3>
+                <p>Contact our support team via the "Contact Us" page and provide the necessary details. We will do our best to resolve the issue.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How can I contact technical support?</h3>
+                <p>You can reach us at support@skillswap.com or via our contact form available on the website.</p>
             </div>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 SkillSwap. Tous droits réservés.</p>
-    </footer>
+    <div class="footer">
+        <img src="/assets/swap-dark.png" alt="">
+        <p>©  2025 SkillSwap. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
