--- a/interface_net2/contact2.html
+++ b/interface_net2/contact2.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - SkillSwap</title>
-    <link rel="stylesheet" href="contact2.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <div class="navbar">
@@ -16,7 +18,7 @@
                     <li><a href="/Home/home.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="/interface_net2/my_skills.html"><i class="fas fa-briefcase"></i> Skills</a></li>
                     <li><a href="/interface_net2/find_skills.html"><i class="fas fa-search"></i> Find Skills</a></li>
-                    <li><a href="/interface_net2/contact.html" class="active"><i class="fas fa-envelope"></i> Contact</a></li>
+                    <li><a href="/interface_net2/contact.html"  class="active"><i class="fas fa-envelope"></i> Contact</a></li>
         
                 </ul>
             </div> 
