Update and rename profile.html to ViewProfile/profile.html

--- a/ViewProfile/profile.html
+++ b/ViewProfile/profile.html
@@ -12,7 +12,7 @@
             <div class="details">
                 <img src="/assets/pic12.png" alt="Profile">
                 <div>
-                    <h2>Wali Alami Mohammed</h2>
+                    <h2>Amine Ouhabi</h2>
                     <p>Data Engineer</p>
                 </div>
             </div>
