Update and rename profile1.html to ViewProfile/profile1.html

--- a/ViewProfile/profile1.html
+++ b/ViewProfile/profile1.html
@@ -12,7 +12,7 @@
             <div class="details">
                 <img src="/assets/pic5.jpeg" alt="Profile">
                 <div>
-                    <h2>Ouahabi Mohammed-Amine</h2>
+                    <h2>wali alami</h2>
                     <p>Photographer</p>
                 </div>
             </div>
