--- a/skill_details/cooking.html
+++ b/skill_details/cooking.html
@@ -51,7 +51,7 @@
     </div>
   <script src="/interface_net2/script.js"></script>
 
-    <!-- Skill Details Section -->
+
     <main class="main-content">
         <section class="skill-details">
             <div class="skill-header">
@@ -65,7 +65,7 @@
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>BENNANI Doha</h4>
                     <p>Pastry chef teaching cake decoration and baking.</p>
                 </div>
@@ -76,7 +76,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>MOHA Idriss</h4>
                     <p>Culinary artist specializing in Italian cuisine.</p>
                 </div>
@@ -87,7 +87,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>MEZGUIDI Meryem</h4>
                     <p>Chef offering workshops in international cuisines.</p>
                 </div>
