--- a/skill_details/painting.html
+++ b/skill_details/painting.html
@@ -51,7 +51,6 @@
     </div>
   <script src="/interface_net2/script.js"></script>
 
-    <!-- Skill Details Section -->
     <main class="main-content">
         <section class="skill-details">
             <div class="skill-header">
@@ -61,12 +60,11 @@
             </div>
         </section>
 
-        <!-- Users Offering the Skill -->
         <section class="users-list">
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>BOUZOUBAA Ghali</h4>
                     <p>Art teacher offering acrylic painting workshops for beginners and professionals.</p>
                 </div>
@@ -77,7 +75,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>TIWTIW Aya</h4>
                     <p>Watercolor expert with 7 years of experience creating stunning landscapes.</p>
                 </div>
@@ -88,7 +86,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>Filali Jihane</h4>
                     <p>Oil painting artist specializing in portraits and modern art techniques.</p>
                 </div>
