--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -65,7 +65,7 @@
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>BENACER Abdrahmane</h4>
                     <p>Professional photographer specializing in portrait and landscape photography.</p>
 
@@ -77,7 +77,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>KRIBCH Amine</h4>
                     <p>Photography teacher offering tips and tricks for beginners and advanced learners.</p>
 
@@ -90,7 +90,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>HADDAD Nacim</h4>
                     <p>Wedding photographer with over 10 years of experience capturing magical moments.</p>
                 </div>
