--- a/skill_details/programming.html
+++ b/skill_details/programming.html
@@ -66,7 +66,7 @@
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>REMHAL Mohammed</h4>
                     <p>Experienced Python Developer with 5 years of teaching experience.</p>
                 </div>
@@ -77,7 +77,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>ALLILOU Zakaria</h4>
                     <p>JavaScript expert passionate about web development and teaching.</p>
                 </div>
@@ -88,7 +88,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>HOUSSAINI zakaria</h4>
                     <p>C++ and Data Structures teacher with a focus on problem-solving skills.</p>
                 </div>
