--- a/skill_details/languages.html
+++ b/skill_details/languages.html
@@ -51,7 +51,6 @@
     </div>
   <script src="/interface_net2/script.js"></script>
 
-    <!-- Skill Details Section -->
     <main class="main-content">
         <section class="skill-details">
             <div class="skill-header">
@@ -61,12 +60,12 @@
             </div>
         </section>
 
-        <!-- Users Offering the Skill -->
+
         <section class="users-list">
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>CARTER Sophia</h4>
                     <p>Italian teacher passionate about culture and communication.</p>
                 </div>
@@ -77,7 +76,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>MELODI Lara</h4>
                     <p>Expert in Mandarin and Cantonese offering personalized lessons.</p>
                 </div>
@@ -88,7 +87,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>BENZAKOUR Hamid</h4>
                     <p>Language coach teaching Spanish and French to beginners.</p>
                 </div>
