--- a/skill_details/music.html
+++ b/skill_details/music.html
@@ -51,7 +51,7 @@
     </div>
   <script src="/interface_net2/script.js"></script>
 
-    <!-- Skill Details Section -->
+
     <main class="main-content">
         <section class="skill-details">
             <div class="skill-header">
@@ -61,12 +61,12 @@
             </div>
         </section>
 
-        <!-- Users Offering the Skill -->
+
         <section class="users-list">
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user1.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>MABROUKI Ahmed</h4>
                     <p>Drummer with experience in jazz and rock music.</p>
                 </div>
@@ -77,7 +77,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user2.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>BELRAHAL Ghita</h4>
                     <p>Vocal coach helping you improve your singing techniques.</p>
                 </div>
@@ -88,7 +88,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/user3.jpg" alt="User Photo">
+                    <img src="/assets/picprofile.png" alt="User Photo">
                     <h4>ALAMI Mehdi</h4>
                     <p>Guitarist offering lessons for acoustic and electric guitar.</p>
                 </div>
