une petite modification et l'ajout de nouveaux links

--- a/Home/home.html
+++ b/Home/home.html
@@ -16,9 +16,9 @@
     <div class="icones1">
         <ul>
           <li><a href="/Home/home.html"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href=""><i class="fas fa-briefcase"></i> Skills</a></li>
-          <li><a href="/interface_net/about.html"><i class="fas fa-search"></i> Find Skills</a></li>
-          <li><a href="/interface_net/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+          <li><a href="/interface_net2/my_skills.html"><i class="fas fa-briefcase"></i> Skills</a></li>
+          <li><a href="/interface_net2/find_skills.html"><i class="fas fa-search"></i> Find Skills</a></li>
+          <li><a href="/interface_net2/contact2.html"><i class="fas fa-envelope"></i> Contact</a></li>
         
         </ul>
       </div> 
@@ -255,7 +255,7 @@
             <div class="profile-photo">
                 <img src="/assets/picprofile.png" alt="">
             </div>
-          <a href="" >Ouahabi Mohammed-Amine</a>
+          <a href="/ViewProfile/profile.html" >Ouahabi Amine</a>
           </div>
           <h5>Skill wanted :UX/UI Design</h5>
           <div class="tooltip-container">
@@ -491,7 +491,7 @@
         <div class="profile-photo">
             <img src="/assets/picprofile.png" alt="">
         </div>
-      <a href="" >Jebar Abdellah</a>
+      <a href="/ViewProfile/profile1.html" >Jebar Abdellah</a>
       </div>
       <h5>Skill wanted : Game Developing</h5>
       <div class="tooltip-container">
