--- a/ViewProfile/profile.html
+++ b/ViewProfile/profile.html
@@ -12,7 +12,7 @@
             <div class="details">
                 <img src="/assets/pic12.png" alt="Profile">
                 <div>
-                    <h2>Amine Ouhabi</h2>
+                    <h2>Ouhabi Amine </h2>
                     <p>Data Engineer</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> mwalialami@gmail.com
+                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
