--- a/ViewProfile/profile1.html
+++ b/ViewProfile/profile1.html
@@ -12,7 +12,7 @@
             <div class="details">
                 <img src="/assets/pic5.jpeg" alt="Profile">
                 <div>
-                    <h2>wali alami</h2>
+                    <h2>Jebar Abdellah</h2>
                     <p>Photographer</p>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt=""> jebarabd@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
