--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -66,7 +66,7 @@
             <div class="user-card">
                 <div class="user-info">
                     <img src="/assets/picprofile.png" alt="User Photo">
-                    <h4>BENACER Abdrahmane</h4>
+                    <h4>MERIOUMI Ayoub</h4>
                     <p>Professional photographer specializing in portrait and landscape photography.</p>
 
                 </div>
@@ -78,7 +78,7 @@
             <div class="user-card">
                 <div class="user-info">
                     <img src="/assets/picprofile.png" alt="User Photo">
-                    <h4>KRIBCH Amine</h4>
+                    <h4>JEBAR Abdellah</h4>
                     <p>Photography teacher offering tips and tricks for beginners and advanced learners.</p>
 
 
