modif inetrface net

--- a/interface_net/contact.html
+++ b/interface_net/contact.html
@@ -18,7 +18,8 @@
                 <div class="liste1"><li class="navbar"><a href="./about.html">About</a> </li>
                 <li class="navbar"><a href="./contact.html">Contact</a></li>
                 <li class="navbar"><a href="./privacy.html">Privacy</a></li>
-                <li class="navbar"><a href="./faq.html">FAQ</a></li></div>
+                <li class="navbar"><a href="./faq.html">FAQ</a></li>
+                <li class="navbar"><a href="./temoignages.html">Testimonials</a></li></div>
                 <div class="liste2"><li class="navbar2"><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
                 
                 <li class="navbar2"><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li></div>
@@ -26,33 +27,33 @@
         </div>
     </div>
     <header>
-        <h1>SkillSwap - Contact us</h1>
-        <p>A question or a specific need ? We are here to help you !</p>
+        <h1>SkillSwap - Contactez-nous</h1>
+        <p>Une question ou un besoin spécifique ? Nous sommes là pour vous aider !</p>
     </header>
 
     <main>
         <section class="contact-info">
-            <h2>Contact information</h2>
+            <h2>Informations de contact</h2>
             <ul>
                 <li><strong>Email :</strong> support@skillswap.com</li>
-                <li><strong>Phone :</strong> +212 6 99 99 99 99</li>
-                <li><strong>Adress :</strong> Fès, Maroc</li>
+                <li><strong>Téléphone :</strong> +212 6 99 99 99 99</li>
+                <li><strong>Adresse :</strong> Fès, Maroc</li>
             </ul>
         </section>
 
         <section class="contact-form">
-            <h2>Send us a message</h2>
+            <h2>Envoyez-nous un message</h2>
             <form action="submit_form.php" method="post">
-                <label for="name">Name :</label>
-                <input type="text" id="name" name="name" placeholder="Your name" required>
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" placeholder="Votre nom" required>
 
                 <label for="email">Email :</label>
-                <input type="email" id="email" name="email" placeholder="Your email" required>
+                <input type="email" id="email" name="email" placeholder="Votre email" required>
 
                 <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="6" placeholder="Your message here..." required></textarea>
+                <textarea id="message" name="message" rows="6" placeholder="Votre message ici..." required></textarea>
 
-                <button type="submit">Send</button>
+                <button type="submit">Envoyer</button>
             </form>
         </section>
     </main>
