--- a/interface_net/about.html
+++ b/interface_net/about.html
@@ -17,7 +17,8 @@
                 <div class="liste1"><li class="navbar"><a href="./about.html">About</a> </li>
                 <li class="navbar"><a href="./contact.html">Contact</a></li>
                 <li class="navbar"><a href="./privacy.html">Privacy</a></li>
-                <li class="navbar"><a href="./faq.html">FAQ</a></li></div>
+                <li class="navbar"><a href="./faq.html">FAQ</a></li>
+                <li class="navbar"><a href="./temoignages.html">Testimonials</a></li></div>
                 <div class="liste2"><li class="navbar2"><button> <a href="../interface_logging/connexion.html">Login</a></button></li>
                 <li class="navbar2"><button> <a href="../interface_inscription/inscription.html">Register </a> </button></li></div>
             </ul>
